# src/controllers/auth.controller.js
@@ -2,11 +2,17 @@ const bcrypt = require('bcryptjs');
 const jwt = require('jsonwebtoken');
 const { User } = require('../models/associations'); 
 const jwtConfig = require('../config/jwt'); 
+const nodemailer = require('nodemailer');
+const crypto = require('crypto');
 
 const register = async (req, res) => {
-  const { username, password, role } = req.body;
-
+  const { name, lastname, username, email, password, role } = req.body;
   try {
+    const existingEmail = await User.findOne({ where: { email } });
+    if (existingEmail) {
+      return res.status(409).json({ message: 'El email ya está registrado.' });
+    }
+
     const existingUser = await User.findOne({ where: { username } });
     if (existingUser) {
       return res.status(409).json({ message: 'El nombre de usuario ya está en uso.' });
@@ -15,7 +21,10 @@ const register = async (req, res) => {
     const hashedPassword = await bcrypt.hash(password, 10); 
 
     const newUser = await User.create({
+      name,
+      lastname,
       username,
+      email,
       password: hashedPassword,
       role: role || 'user' 
     });
@@ -73,7 +82,87 @@ const login = async (req, res) => {
   }
 };
 
+const forgotPassword = async (req, res) => {
+  const { email } = req.body;
+
+  try {
+    const user = await User.findOne({ where: { email } });
+
+    if (!user) {
+      return res.status(200).json({ message: 'Si el correo electrónico existe, se ha enviado un enlace para restablecer la contraseña.' });
+    }
+
+    const resetToken = crypto.randomBytes(32).toString('hex');
+    const tokenExpiration = Date.now() + 3600000;
+
+    user.resetPasswordToken = resetToken;
+    user.resetPasswordExpires = tokenExpiration;
+    await user.save();
+
+    const transporter = nodemailer.createTransport({
+      service: 'Gmail',
+      auth: {
+        user: 'luisalbertotaleromartinez@gmail.com',
+        pass: 'ccraqtbxcqbikokb',
+      },
+    });
+
+    const resetUrl = `http://localhost:5173/reset-password/${resetToken}`; // URL del frontend
+
+    const mailOptions = {
+      to: user.email,
+      from: 'luisalbertotaleromartinez@gmail.com',
+      subject: 'Restablecimiento de Contraseña',
+      html: `
+        <p>Has solicitado restablecer tu contraseña. Haz clic en el siguiente enlace:</p>
+        <a href="${resetUrl}">${resetUrl}</a>
+        <p>Este enlace es válido por 1 hora.</p>
+      `,
+    };
+
+    await transporter.sendMail(mailOptions);
+
+    res.status(200).json({ message: 'Email de recuperación enviado.' });
+    
+  } catch (error) {
+    console.error('Error en forgot-password:', error);
+    res.status(500).json({ message: 'Error interno del servidor.' });
+  }
+};
+
+const resetPassword = async (req, res) => {
+  const { token, newPassword } = req.body;
+
+  try {
+    const user = await User.findOne({ 
+      where: { 
+        resetPasswordToken: token,
+        resetPasswordExpires: { [User.sequelize.Op.gt]: Date.now() } // Verifica si el token ha expirado
+      }
+    });
+
+    if (!user) {
+      return res.status(400).json({ message: 'El token es inválido o ha expirado.' });
+    }
+
+    const hashedPassword = await bcrypt.hash(newPassword, 10);
+    user.password = hashedPassword;
+    user.resetPasswordToken = null;
+    user.resetPasswordExpires = null;
+    await user.save();
+
+    res.status(200).json({ message: 'Contraseña actualizada correctamente.' });
+    
+  } catch (error) {
+    console.error('Error en reset-password:', error);
+    res.status(500).json({ message: 'Error interno del servidor.' });
+  }
+};
+
+
 module.exports = {
   register,
-  login
+  login,
+  forgotPassword,
+  resetPassword
 };
